# b_tree_plus_alpha

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  all_8hpp_source.html  annotated.html  annotated_dup.js  b__tree__plus__alpha_8hpp_source.html  bit__container_8hpp_source.html  bit__deque__container_8hpp_source.html  bit__forward__iterator_8hpp_source.html  bp__internal__node_8hpp_source.html  bp__internal__node__functions_8hpp_source.html  bp__internal__node__template_8hpp_source.html  bp__leaf__forward__iterator_8hpp_source.html  bp__node__pointer_8hpp_source.html  bp__postorder__iterator_8hpp_source.html  bp__tree_8hpp_source.html  bp__tree__template_8hpp_source.html  bp__value__forward__iterator_8hpp_source.html  classes.html  classstool_1_1bptree_1_1BPInternalNode-members.html  classstool_1_1bptree_1_1BPInternalNode.html  classstool_1_1bptree_1_1BPInternalNodeFunctions-members.html  classstool_1_1bptree_1_1BPInternalNodeFunctions.html  classstool_1_1bptree_1_1BPInternalNode_3_01stool_1_1bptree_1_1PermutationContainer_00_01stool_1_1bptree_1_1PermutationItem_01_4.html  classstool_1_1bptree_1_1BPInternalNode_3_01stool_1_1bptree_1_1PermutationContainer_00_01stool_1_740b93e9c7887a718b89058bc03e3f6d.html  classstool_1_1bptree_1_1BPInternalNode_3_01stool_1_1bptree_1_1PermutationContainer_00_01stool_1_89092bd5dc4e7689bae5db2273dbb4ea.html  classstool_1_1bptree_1_1BPInternalNode_3_01stool_1_1bptree_1_1PermutationContainer_00_01stool_1_add00efcfd3949efbf24e7429088769d.html  classstool_1_1bptree_1_1BPInternalNode_3_01stool_1_1bptree_1_1PermutationContainer_00_01stool_1_afe73bae0f59cc432e5c2d1a3e81e201.html  classstool_1_1bptree_1_1BPInternalNode_3_01stool_1_1bptree_1_1PermutationContainer_00_01stool_1_fd913aa8002719ca0729f379e9996121.html  classstool_1_1bptree_1_1BPLeafForwardIterator-members.html  classstool_1_1bptree_1_1BPLeafForwardIterator.html  classstool_1_1bptree_1_1BPNodePointer-members.html  classstool_1_1bptree_1_1BPNodePointer.html  classstool_1_1bptree_1_1BPPostorderIterator-members.html  classstool_1_1bptree_1_1BPPostorderIterator.html  classstool_1_1bptree_1_1BPTree-members.html  classstool_1_1bptree_1_1BPTree.html  (+1355 more)
docs/html/: annotated.html  annotated_dup.js  b__tree__plus__alpha_8hpp_source.html  bit__container_8hpp_source.html  bit__forward__iterator_8hpp_source.html  bp__internal__node_8hpp_source.html  bp__internal__node__functions_8hpp_source.html  bp__internal__node__template_8hpp_source.html  bp__leaf__forward__iterator_8hpp_source.html  bp__node__pointer_8hpp_source.html  bp__postorder__iterator_8hpp_source.html  bp__tree_8hpp_source.html  bp__tree__template_8hpp_source.html  bp__value__forward__iterator_8hpp_source.html  class_b_p_internal_node.html  class_b_p_internal_node2.html  class_plain_s_p_s_i_containe.html  class_s_p_s_i.html  classes.html  classstool_1_1_b_p_internal_node-members.html  classstool_1_1_b_p_internal_node.html  classstool_1_1_b_p_internal_node_3_01_permutation_container_00_01_permutation_item_01_4-members.html  classstool_1_1_b_p_internal_node_3_01_permutation_container_00_01_permutation_item_01_4.html  classstool_1_1_b_p_internal_node_functions-members.html  classstool_1_1_b_p_internal_node_functions.html  classstool_1_1_b_p_node_pointer-members.html  classstool_1_1_b_p_node_pointer.html  classstool_1_1_b_p_postorder_iterator-members.html  classstool_1_1_b_p_postorder_iterator.html  classstool_1_1_b_p_tree-members.html  classstool_1_1_b_p_tree.html  classstool_1_1_dynamic_permutation-members.html  classstool_1_1_dynamic_permutation.html  classstool_1_1_dynamic_permutation_builder-members.html  classstool_1_1_dynamic_permutation_builder.html  classstool_1_1_permutation_container-members.html  classstool_1_1_permutation_container.html  classstool_1_1_permutation_container_1_1_permutation_iterator-members.html  classstool_1_1_permutation_container_1_1_permutation_iterator.html  classstool_1_1_plain_s_p_s_i_container-members.html  (+141 more)
examples/: CMakeLists.txt  dynamic_bit_example.cpp  dynamic_permutation_example.cpp  dynamic_prefix_sum_example.cpp  dynamic_sequence_64_example.cpp  dynamic_wavelet_matrix_for_range_search_example.cpp  dynamic_wavelet_tree_example.cpp  example_all.sh  spsi_example.cpp
experiment/: CMakeLists.txt  experiment.sh  experiment_mac.sh
experiment/include/: bv_bv_wrapper.hpp  dyn_packed_spsi_wrapper.hpp  dyn_suc_bv_wrapper.hpp
experiment/main/: bit_rank_select_main.cpp  permutation_main.cpp  prefix_sum_main.cpp  rank_select_main.cpp
experiment/scripts/: experiment.sh
include/: all.hpp  b_tree_plus_alpha.hpp  bp_tree.hpp  dynamic_bit_sequence.hpp  dynamic_permutation.hpp  dynamic_prefix_sum.hpp  dynamic_sequence64.hpp  dynamic_wavelet_tree.hpp  simple_btree.hpp
include/bp_tree/: bp_internal_node.hpp  bp_internal_node_functions.hpp  bp_leaf_forward_iterator.hpp  bp_node_pointer.hpp  bp_postorder_iterator.hpp  bp_tree.hpp  bp_value_forward_iterator.hpp  stack_node.hpp
include/permutation/: bp_internal_node_template.hpp  bp_tree_template.hpp  dynamic_permutation.hpp  (+3 more)
main/: bit_test_main.cpp  permutation_test_main.cpp  sequence_test_main.cpp  spsi_test_main.cpp  wavelet_tree_test_main.cpp
misc/: tables.xlsx
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+14 more)
test/: CMakeLists.txt  bit_test.hpp  bit_test_main.cpp  naive_permutation.hpp  permutation_test.hpp  permutation_test_main.cpp  prefix_sum_test_main.cpp  range_search_test_main.cpp  sequence_test_main.cpp  spsi_test.hpp  spsi_test_main.cpp  test_all.sh  wavelet_tree_test_main.cpp
test/include/: bit_sequence_test.hpp  bit_test.hpp  permutation_test.hpp  spsi_test.hpp
(+39 files in other folders)
